<resources>
    <string name="app_name">AntExchange</string>
    <string name="please_confirm_net">请确认网络连接</string>
    <string name="tips_set_download_url">请先设置你的Apk下载url，设置请到UpdateUtil</string>
    <string name="tips_http_error1">数据解析错误</string>
    <string name="tips_http_error2">网络不可用</string>
    <string name="tips_http_error3">证书验证失败</string>
    <string name="tips_http_error4">未知错误</string>
    <string name="tips_app_not_found">未找到App</string>
    <string name="tips_app_upgrade">您未开启读写SD卡权限，无法帮您更新APP！</string>
    <string name="tips_press_to_speak">按住说话</string>
    <string name="tips_set_language">语言设置</string>
    <string name="tips_languages">多语言</string>
    <string name="tips_language_cn">简体中文</string>
    <string name="tips_language_en">English</string>
    <string name="tips_scans">将二维码放入框内，即可自动扫描</string>
    <string name="tips_scan_flash_on">轻点照亮</string>
    <string name="tips_scan_flash_off">轻点关闭</string>
    <string name="tips_save_succeed">保存成功！</string>
    <string name="tips_save_failed">保存失败！</string>
    <string name="tab1">首页</string>
    <string name="tab2">行情</string>
    <string name="tab3">交易</string>
    <string name="tab4">资产</string>
    <string name="tab5">我的</string>
    <string name="tips_ip">请输入IP</string>
    <string name="tips_ip_input">请输入IP！</string>
    <string name="tip_empty">暂无数据</string>
    <string name="tips_no_more_desc">没有更多数据</string>
    <string name="tips_more_desc">加载查看更多</string>
    <string name="tips_no_records">你暂时还没发生任何交易记录</string>
    <string name="img_url">%1$s/file%2$s</string>
    <string name="tips_get_code_again">%1$ds重新获取</string>
    <string name="title_coin_out">提币</string>
    <string name="tips_get_again">%1$ds重新获取</string>
    <string name="common_copy_succ">复制成功</string>

    <string name="tips_order_detail">订单明细</string>
    <string name="tips_time">时间</string>
    <string name="tips_commission_price">委托价(USDT)</string>
    <string name="tips_commission_amount">委托量(BTC)</string>
    <string name="tips_total_turnover">成交总额</string>
    <string name="tips_average_transaction_price">成交均价</string>
    <string name="tips_volume">成交量</string>
    <string name="tips_remain">剩余量</string>
    <string name="tips_coin">币币</string>
    <string name="tips_search_currency">搜索币种</string>
    <string name="tips_currency">币种</string>
    <string name="tips_input_currency">请输入币种</string>
    <string name="tips_sales_unit">计价单位</string>
    <string name="tips_order_status">订单状态</string>
    <string name="tips_revoke">已撤销</string>
    <string name="tips_cancel">撤销</string>
    <string name="tips_price">价格</string>
    <string name="tips_btc_amount">数量(BTC)</string>
    <string name="tips_actual_transaction">实际成交(BTC)</string>
    <string name="tips_total_transaction_volume">成交总量</string>
    <string name="tips_average_transaction_price_usdt">成交均价(USDT)</string>
    <string name="tips_btc_volume">成交量(BTC)</string>

    <string name="tips_buy">买入%1$s</string>
    <string name="tips_sell">卖出%1$s</string>
    <string name="tips_input_amount">请输入数量</string>
    <string name="tips_input_no_amount">数量不能为零</string>
    <string name="tips_input_no_price">价格不能为零</string>
    <string name="tips_input_price">请输入价格</string>
    <string name="tips_exchange_order_sussess">订单委托成功</string>
    <string name="tips_exchange_order_create">订单委托中</string>
    <string name="tips_delete_success">取消自选成功</string>
    <string name="tips_add_success">添加自选成功</string>
    <string name="tips_min_tx_amount">交易额太小，无法交易</string>
    <string name="tips_min_tx_size">数量太小，无法交易</string>
    <string name="tips_insufficient_quantity_available">可用数量不足</string>
    <string name="tips_default">默认</string>
    <string name="tips_nums">%1$s位小数</string>
    <string name="tips_coin_symbol">%1$s %2$s</string>
</resources>
