<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/v_shadow"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/icon_shadow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.jumai.antexchange.ui.widget.TabView
            android:id="@+id/tab_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:src="@drawable/selector_tab_home"
            app:text="@string/tab1" />

        <com.jumai.antexchange.ui.widget.TabView
            android:id="@+id/tab_market"
            android:layout_width="0dp"
            app:src="@drawable/selector_tab_market"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:text="@string/tab2" />

        <com.jumai.antexchange.ui.widget.TabView
            android:id="@+id/tab_transaction"
            android:layout_width="0dp"
            app:src="@drawable/selector_tab_transaction"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:text="@string/tab3" />

        <com.jumai.antexchange.ui.widget.TabView
            android:id="@+id/tab_asset"
            android:layout_width="0dp"
            app:src="@drawable/selector_tab_asset"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:text="@string/tab4" />

        <com.jumai.antexchange.ui.widget.TabView
            android:id="@+id/tab_mine"
            android:layout_width="0dp"
            app:src="@drawable/selector_tab_mine"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:text="@string/tab5" />
    </LinearLayout>
</merge>
