<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_marginLeft="13dp"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_back"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/tips_order_detail"
            android:textColor="@color/color_33"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:id="@+id/tv_sale"
            android:text="卖出"
            android:layout_gravity="center"
            android:textColor="@color/color_f04d4d"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_coin"
            android:text="BTC/USDT"
            android:layout_gravity="center"
            android:textColor="@color/color_33"
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <View
        android:background="#E5E5E5"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="66dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tips_time"
                android:textSize="12sp"
                android:textColor="@color/color_b2"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_time"
                android:text="09-01 08:30"
                android:textSize="12sp"
                android:textColor="@color/color_33"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tips_commission_price"
                android:textSize="12sp"
                android:textColor="@color/color_b2"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_price"
                android:text="10338.99"
                android:textSize="12sp"
                android:textColor="@color/color_33"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/tips_commission_price"
                android:textSize="12sp"
                android:layout_gravity="right"
                android:textColor="@color/color_b2"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_amount"
                android:text="1.0089"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:textSize="12sp"
                android:textColor="@color/color_33"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:background="#F7F8FA"
        android:layout_width="match_parent"
        android:layout_height="8dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/tips_total_turnover"
            android:textSize="14sp"
            android:textColor="@color/color_b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_total"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="10338.99 USDT"
            android:textSize="14sp"
            android:textColor="@color/color_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/tips_average_transaction_price"
            android:textSize="14sp"
            android:textColor="@color/color_b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_average_price"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="10338.99 USDT"
            android:textSize="14sp"
            android:textColor="@color/color_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/tips_volume"
            android:textSize="14sp"
            android:textColor="@color/color_b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_volume"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="10338.99 USDT"
            android:textSize="14sp"
            android:textColor="@color/color_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="@string/tips_remain"
            android:textSize="14sp"
            android:textColor="@color/color_b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_remain"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="10338.99 USDT"
            android:textSize="14sp"
            android:textColor="@color/color_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:text="手续费"
            android:textSize="14sp"
            android:textColor="@color/color_b2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_handling_fee"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:text="10338.99 USDT"
            android:textSize="14sp"
            android:textColor="@color/color_33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>